@startuml

class PlantSettings
{
    int id
    string plantName
    
    float timeToGrow
    float timeToCorrupt
    
    Range humidityRange
    Range illuminationRange
    Range temperatureRange
}
class Seed
{
    PlantSettings plantSettings
    
    Plant Plant()
}
class Plant
{
    PlantSettings plantSettings
    Slot slot
    
    float growthProgress
    float corruptionProgress
    
    bool isGrowing
    
    void Initialize()
    
    bool CheckGrowthConditions()
    
    void Grow()
    void Corrupt()
    
    void Tick()
    IEnumerator GrowCycle()

    void StartGrowth()
    void EndGrowth()
}
class Range
{
    float LeftBorder
    float RightBorder
    float Average
    
    bool Contains()
}
class Capsule
{   
    Electricity ElectricityToControlIllumination
    Electricity ElectricityToControlTemperature
    Water WaterToControlHumidity
    
    float HumidityPercentagePerSecond
    float IlluminationPercentagePerSecond
    float TemperaturePercentagePerSecond
    
    bool controlHumidity
    bool controlIllumination
    bool controlTemperature

    WeatherController weatherController
    Plant plant
    
    WeatherRegulator humidityRegulator
    WeatherRegulator illuminationRegulator
    WeatherRegulator temperatureRegulator
    
    Electricity NeededElectricity
    Water NeededWater
    
    float CurrentHumidity
    float CurrentIllumination
    float CurrentTemperature
    
    void ResetWeatherParameters()
    
    void RegulateParameter()
    void RegulateHumidity()
    void RegulateIllumination()
    void RegulateTemperature()
}
class GreenHouse
{
    Capsule[] capsules
    
    void RecalculateNeededElectricity()
    void RecalculateNeededWater()
    
    void Plant()
    void ChangeSlot()
    
    void Receive(Electricity resource)
    void Receive(Water resource)
}
class WeatherRegulator
{
    float preparedness
    float percentagePerSecond
    bool control
    float currentValue
        
    void Reset()
    void Regulate()
}

Seed "1" *- "1" Plant : creates
Seed o-- PlantSettings
Plant o-- PlantSettings
PlantSettings o-- Range
Capsule o--o Plant
GreenHouse o-- Capsule
Capsule o-- WeatherRegulator

@enduml